tests/fixtures/invalid/undefined_input.pi
# Error: Input no declarado
project test

task process
   input undefined_input
   goal process data
